# vector_db

./: .gitignore  COMPRESSION_IMPLEMENTATION_SUMMARY.md  COMPRESSION_PERFORMANCE_REPORT.md  DETAILED_FIX_PLAN.md  IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_BENCHMARK_AND_ROADMAP.md  PERFORMANCE_EVALUATION.md  PERFORMANCE_EVALUATION_LATEST.md  README.md  README_TESTS.md  RECALL_OPTIMIZATION_PLAN.md  RECALL_OPTIMIZATION_RESULT.md  performance_status_25022521.md  pom.xml  test_recall.sh
.github/workflows/: native-build.yml  release.yml
archive/: performance_report_25022518.md
docs/: OPTIMIZATION_SUMMARY.md  PERFORMANCE_BENCHMARK.md  benchmark_charts.md
native/: CMakeLists.txt
native/bridge/: VectorDBJNI.cpp
native/compute/: ADCUtils.cpp  ADCUtils.h  BatchDistance.cpp  BatchDistance.h  DistanceAVX2.cpp  DistanceScalar.cpp  DistanceUtils.h  SIMDDispatcher.cpp
native/core/: VectorStore.cpp  VectorStore.h
native/index/: AnnoyIndex.cpp  AnnoyIndex.h  HNSWIndex.cpp  HNSWIndex.h  HNSWPQIndex.cpp  HNSWPQIndex.h  IVFIndex.cpp  IVFIndex.h  LSHIndex.cpp  LSHIndex.h  PQIndex.cpp  PQIndex.h  VectorIndex.h
native/jni_headers/: com_vectordb_jni_NativeAnnoyIndex.h  com_vectordb_jni_NativeHnswIndex.h  com_vectordb_jni_NativeIndex.h  com_vectordb_jni_NativeIvfIndex.h  com_vectordb_jni_NativeLshIndex.h  com_vectordb_jni_NativePqIndex.h
native/test/: test_hnsw.cpp  test_hnswpq.cpp  test_performance.cpp  test_simple.cpp
optimization/: OPTIMIZATION_CHECKLIST.md
src/main/java/com/vectordb/: CompressionExample.java  TextSearchExample.java  VectorDatabaseExample.java
src/main/java/com/vectordb/config/: CompressionConfig.java
src/main/java/com/vectordb/core/: SearchResult.java  Vector.java  VectorDatabase.java
src/main/java/com/vectordb/index/: AnnoyIndex.java  HnswIndex.java  HnswPqIndex.java  IvfIndex.java  LshIndex.java  PqIndex.java  VectorIndex.java
src/main/java/com/vectordb/jni/: NativeAnnoyIndex.java  NativeHnswIndex.java  NativeIndex.java  NativeIvfIndex.java  NativeLoader.java  NativeLshIndex.java  NativePqIndex.java
src/main/java/com/vectordb/storage/: VectorStorage.java
src/main/java/com/vectordb/util/: TextVectorizer.java  VectorUtils.java
src/main/resources/native/: libvectordb.3.dylib  libvectordb.dylib
src/test/java/com/vectordb/: HnswIndexTest.java  VectorDatabaseIntegrationTest.java  VectorDatabaseTestSuite.java
src/test/java/com/vectordb/benchmark/: CompressionPerformanceTest.java  PerformanceBenchmarkTest.java  RecallDiagnosticTest.java  RecallOptimizationTest.java
src/test/java/com/vectordb/core/: SearchResultTest.java  VectorTest.java
src/test/java/com/vectordb/index/: HnswIndexTest.java
src/test/java/com/vectordb/storage/: VectorStorageTest.java
src/test/java/com/vectordb/util/: VectorUtilsTest.java
